<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity"
    android:background="@color/background_color">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="false"
        tools:layout_editor_absoluteX="-59dp"
        tools:layout_editor_absoluteY="278dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20pt"
            android:background="#00FFFFFF"
            android:text="@string/ApplicationName"
            android:textColor="@color/text_color"
            android:textSize="64sp"
            tools:ignore="MissingConstraints" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100pt"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#00FFFFFF"
                android:text="@string/registration"
                android:textColor="@color/text_color"
                android:textSize="36sp"
                tools:ignore="MissingConstraints" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/reg_input_login"
                android:layout_width="250dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="20pt"
                tools:ignore="MissingConstraints">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/auth_input_login"
                    android:inputType="textWebEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/reg_input_password"
                android:layout_width="250dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="2pt"
                tools:ignore="MissingConstraints">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/auth_input_password"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/reg_input_confirm_password"
                android:layout_width="250dp"
                android:layout_height="60dp"
                android:layout_gravity="center"

                tools:ignore="MissingConstraints">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/reg_input_confirm_password"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="250pt"
            android:orientation="vertical">

            <Button
                android:id="@+id/reg_reg_button"
                android:layout_width="115pt"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/background_button_color"
                android:text="@string/auth_reg_button"
                android:textColor="@color/text_button_color"
                android:textSize="24sp"
                tools:ignore="MissingConstraints" />
        </LinearLayout>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>